tests/snapshots/tui_snapshot__tui_streaming_text.snap
---
source: tests/tui_snapshot.rs
expression: view
---
  Pi (dummy/dummy-model)
  ctrl+l: model  ctrl+p: next  ctrl+shift+p: prev  ctrl+o: tools  ctrl+t: thi...
  resources: 0 skills, 0 prompts, 0 themes, 0 extensions


  Assistant:
  Streaming response...

  Tokens: 0 in / 0 out  |  Persist: balanced  |  /help  |  Ctrl+C: quit
